# otpod

./: .gitignore  .travis.yml  ChangeLog  README.rst  appveyor.yml  pyproject.toml  setup.py
.cache/v/cache/: lastfailed
.github/workflows/: build.yml
doc/: Makefile
doc/source/: conf.py  examples.rst  index.rst  user_manual.rst
doc/source/_generated/: otpod.DataHandling.rst  otpod.KrigingPOD.rst  otpod.PolynomialChaosPOD.rst  otpod.QuantileRegressionPOD.rst  otpod.UnivariateLinearRegressionPOD.rst
doc/source/examples/: AdaptiveSignalPOD.ipynb  Make_HM.py  PLI.ipynb  PODSummary.ipynb  SobolIndices.ipynb  adaptiveHitMissPOD.ipynb  examples.rst  inputs.txt  krigingPOD.ipynb  krigingPOD.rst  linearAnalysis.ipynb  linearAnalysis.rst  linearAnalysisCensoredData.ipynb  linearAnalysisCensoredData.rst  linearPOD.ipynb  linearPOD.rst  linearPODCensoredData.ipynb  linearPODCensoredData.rst  linearPODfromAnalysis.rst  outputs.txt  (+17 more)
otpod/: __init__.py  _adaptive_hitmiss_pod.py  _adaptive_signal_pod.py  _decorator.py  _docstring_inherit.py  _kriging_pod.py  _kriging_tools.py  _math_tools.py  _pli.py  _pli_pod.py  _pod.py  _pod_summary.py  _polynomial_chaos_pod.py  _progress_bar.py  _quantile_regression_pod.py  _sobol_indices.py  _univariate_linear_model_analysis.py  _univariate_linear_model_pod.py  _univariate_linear_regression_pod.py
test/: conftest.py  data  test_adaptive_hitmiss_pod.py  test_adaptive_signal_pod.py  test_analysis.py  test_chaos_1D_pod.py  test_kriging_pod.py  test_linear_pod.py  test_notebook.py  test_quantile_regression_pod.py  test_sobol_indices.py
(+4 files in other folders)
